fixed spacing issues

--- a/app/src/scss/_globals.scss
+++ b/app/src/scss/_globals.scss
@@ -122,56 +122,53 @@ button, .button {
     }
   }
 
-  //spacing 
-  .container{
-    max-width: 169.375rem;
-    margin: 0 auto;
-    &--pall{
-        padding-top: 4.37rem;  
-        padding-right: 1.5rem;
-        padding-bottom: 4.37rem;
-        padding-left: 1.5rem;
+// Spacing
+.container {
+  max-width: 69.375rem;
+  margin: 0 auto;
+
+  &--pall {
+    padding-top: 4.375rem;
+    padding-right: 1.5rem;
+    padding-bottom: 4.375rem;
+    padding-left: 1.5rem;
 
     @include breakpoint-up(large){
-        padding-top: 6rem;
-        padding-bottom: 6rem;
-      }
+      padding-top: 6rem;
+      padding-bottom: 6rem;
     }
-
-    &--py{
-        padding-top: 4.37rem; 
-        padding-bottom: 4.37rem;
-
-    @include breakpoint-up(large){
-        padding-top: 6rem;
-        padding-bottom: 6rem;
-      }
-    }
-
-    &--px{
-        padding-right: 1.5rem;
-        padding-left: 1.5rem;
-    }
-
-    &--pt{
-        padding-top: 4.37rem; 
-
-    @include breakpoint-up(large){
-        padding-top: 6rem;
-      }
-    }
-    &--pr{
-        padding-right: 1.5rem;
-    }
-    &--pb{
-        padding-bottom: 4.37rem;
-
-    @include breakpoint-up(large){
-        padding-bottom: 6rem;
-      }
-    }
-    &--pl{
-        padding-left: 1.5rem;
-    }
-   
   }
+  &--py {
+    padding-top: 4.375rem;
+    padding-bottom: 4.375rem;
+    
+    @include breakpoint-up(large){
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+    }
+  }
+  &--px {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+  &--pt {
+    padding-top: 4.375rem;
+    
+    @include breakpoint-up(large){
+      padding-top: 6rem;
+    }
+  }
+  &--pr {
+    padding-right: 1.5rem;
+  }
+  &--pb {
+    padding-bottom: 4.375rem;
+    
+    @include breakpoint-up(large){
+      padding-bottom: 6rem;
+    }
+  }
+  &--pl {
+    padding-left: 1.5rem;
+  }
+}
