--- a/app/src/scss/_hero.scss
+++ b/app/src/scss/_hero.scss
@@ -30,22 +30,18 @@
       //background-position: left center;
     }
 
-    &::before, &::after {
-      //border: 1px solid magenta;
-    }
-
     &::before { 
 
       @include breakpoint-up(large){
         content: "";
         position: absolute;
         height: 100%;
-        background-image: url('/images/bg-intro-desktop.svg');     //background for desktop   
+        background-image: url('/images/bg-intro-desktop.svg');        
         background-repeat: no-repeat;
         background-position: center bottom;
-        width: 113%;
-        background-size: 110%;
-        background-position: -33% 64%;
+        width: 150%;
+        background-size: 122%;
+        background-position: 0% 83%;
       }
     }
 
@@ -53,9 +49,9 @@
       content: "";
       position: absolute;
       width: 100%;
-      height: 120%;
-      background-image: url('/images/image-mockups.png'); //phones background
-      background-size: 94%;
+      height: 100%;
+      background-image: url('/images/image-mockups.png');
+      background-size: 93%;
       background-repeat: no-repeat;
       background-position: center bottom;
 
@@ -66,19 +62,20 @@
       @include breakpoint-up(large){
         width: 120%;
         height: 122%;
-        background-size: 75%;
-        background-position: center 96%;
-        left: 6%;
+        background-size: 94%;
+        background-position: center 150%;
+        left: 22%;
       }
     }
   }
-&__text{ 
-    text-align: center;
-    @include breakpoint-up(large){
-        flex: 2;
-        order: 1;
-        text-align: left;
-      }
 
-}
+  &__text {
+    text-align: center;
+
+    @include breakpoint-up(large){
+      flex: 2;
+      order: 1;
+      text-align: left;
+    }
+  }
 }
